--- a/CS670_CourseProject.qmd
+++ b/CS670_CourseProject.qmd
@@ -1,7 +1,7 @@
 ---
 title: "CS 670: Data Science Course Project"
 format: html
-editor: visual
+editor: source
 ---
 
 **Exploring the NASA Exoplanet Archive**
@@ -33,16 +33,13 @@ This dataset is valuable for studying exoplanet trends, planetary system formati
 
 ------------------------------------------------------------------------
 
-### 2.  Research Questions
+### 2. Research Questions
 
 #### 2.1. What are the different types of exoplanets present in the dataset?
 
-*Analyzed exoplanet classification based on mass, radius, and orbital properties to identify common types.*
+**Analysis:**
 
-- Loaded the dataset and explored its structure.
-- Cleaned missing values and converted mass/radius to Earth units.
-- Based on thresholds, exoplanets can be categorized into types (e.g., Terrestrial, Super-Earth, Gas Giant).
-- Bar charts and scatter plots visualized the distribution and relationships between mass, radius, and orbital properties.\
+Exoplanets were categorized based on mass and radius into Terrestrial, Super-Earth, Gas Giant, Neptune-like, Super-Neptune, and Inflatable Planets.
 
 ##### 2.1.1. Visualization
 
@@ -113,26 +110,13 @@ ggplot(data, aes(x = orbital_radius, color = category)) +
 -   Categorization of Exoplanets: Based on their mass and radius, exoplanets were classified as terrestrial, super-Earth, Neptune-like, gas giant, super-Neptune, and inflatable planet.
 -   Handling Missing Values: Median imputation was used to fill in the missing values for mass_multiplier, radius_multiplier, and orbital_radius.\
 
-##### 2.1.3.  Results, Analysis, and Discussion
+#### 2.2. Is there a relationship between an exoplanet’s properties and its host star?
 
--   The visualizations and preprocessing steps help understand the classification and distribution of exoplanets.
--   The dataset's limitations include missing values and potential biases in detection methods.\
+**Analysis:**
 
-#### 2.2.  Is there a relationship between an exoplanet’s properties and its host star?
+-   Examined correlations between stellar magnitude and planetary characteristics.
+-   Applied Pearson correlation and regression models to check dependencies.
 
-*To determine dependencies, we investigated correlations between stellar attributes (magnitude, mass, radius, and luminosity) and planetary characteristics (mass, radius, and orbital properties).*
-
-**Data Cleaning & Standardization:**
-
--   Loaded and cleaned the dataset, handling missing values.
--   Converted planetary mass and radius to Earth-based units for consistency.\
-
-**Statistical Analysis:**
-
--   Performed Pearson correlation analysis to check relationships between stellar magnitude and planetary attributes.
--   Conducted linear regression models using stellar magnitude as the predictor for exoplanet mass, radius, and orbital radius.
--   Scatter plots with trend lines were used to visualize relationships and identify patterns.\
-    
 ##### 2.2.1 Visualization
 
 **Scatter plot: Stellar Magnitude vs. Exoplanet Mass**
@@ -203,13 +187,32 @@ ggplot(data, aes(x = stellar_magnitude, y = orbital_radius)) +
 
 **Regression Model Results & Interpretation**
 
-
-
 | Predictor (X) | Response (Y) | Coefficient | R² | p-value | Interpretation |
 |------------|------------|------------|------------|------------|------------|
 | Stellar Magnitude | Exoplanet Mass | -134.2 | 0.012 | 1.656e-15 (\*\*\*) | It's a weak negative relationship, but stellar mass likely matters more. |
 | Stellar Magnitude | Exoplanet Radius | -0.816 | 0.2215 | \<2.2e-16 (\*\*\*) | Moderate negative correlation; larger planets found around brighter stars. |
 | Stellar Magnitude | Orbital Radius | -0.64 | 0.0002 | 0.292 (NS) | No significant correlation; planetary orbits depend on other factors. |
+
+**Multiple Linear Regression Model**
+
+In order to further investigate the relationship between exoplanet properties and their host stars a multiple linear regression model was fit to the data using 10-fold cross-validation.
+
+Model: *Stellar Magnitude \~ Exoplanet Mass + Exoplanet Radius + Orbital Period + Orbital Radius + Eccentricity*
+
+R² : 0.3513
+
+| Predictor (X) | Coefficient | p-value | Interpretation |
+|------------------|------------------|------------------|------------------|
+| (Intercept) | 1.445e+01 | \<2e-16 (\*\*\*) | Stellar magnitude starts at about 14 for this model, though, only exccentricity can be expected to be near 0. |
+| Exoplanet Mass | 3.453e-05 | 0.000512 (\*\*\*) | Similar to the univariate linear regression case. |
+| Exoplanet Radius | -2.384e-01 | \<2e-16 (\*\*\*) | Similar to the univariate linear regression case. |
+| Orbital Period | 4.534e-06 | 0.512100 | Period was not significant. |
+| Orbital Radius | -3.798e-04 | 0.660614 | Even less significant then with ULR. |
+| Eccentricity | -7.064e+00 | \<2e-16 (\*\*\*) | Strong negative correlation, non-circular orbits impliy brighter stars. |
+
+![](./figures/Q2Fig3b.png){style="float:right;" fig-alt=""}\
+
+*Plot shows the prediction accuracy of the MLR model. Density lines have been added to mitigate overplotting, and a perfect predication accuracy reference line of y=x was also added. Points above this line are an overestimate and points below the line are an underestimate.*
 
 ##### 2.2.3. Results, Analysis, and Discussion
 
@@ -219,8 +222,7 @@ ggplot(data, aes(x = stellar_magnitude, y = orbital_radius)) +
     -   The orbital radius does not show any meaningful correlation with stellar magnitude.
 -   **Limitations**
     -   **Selection Bias:** The dataset contains exoplanets detected via different methods (e.g., transit, radial velocity), which may introduce observational bias.
-    -   **Missing Key Variables:** Stellar magnitude does not fully capture important host star properties.
-        A better analysis can include:
+    -   **Missing Key Variables:** Stellar magnitude does not fully capture important host star properties. A better analysis can include:
         -   **Stellar Mass:** Directly impacts planetary formation.
         -   **Spectral Type:** Determines the star’s temperature, affecting habitable zones.
         -   **Metallicity:** High-metallicity stars tend to form gas giants more frequently.
@@ -234,7 +236,6 @@ ggplot(data, aes(x = stellar_magnitude, y = orbital_radius)) +
 
 *Examined the distribution of exoplanet masses to identify trends, detect biases in observational methods, and compare findings with known planetary formation models.*
 
--   Loaded and cleaned the dataset, handling missing values and applying log transformations to mass and radius for better distribution analysis.
 -   Used histograms and density plots (linear and log scale) to explore exoplanet mass distributions.
 -   Conducted correlation analysis to investigate the relationship between mass and radius.
 -   Applied k-means clustering to identify mass-based groupings of exoplanets.
@@ -247,33 +248,37 @@ ggplot(data, aes(x = stellar_magnitude, y = orbital_radius)) +
 
 ![](./figures/Q3Fig1.png){style="float:right;" fig-alt=""}\
 
+**Description:** This scatter plot shows the relationship between exoplanet mass and radius on a log scale. The red line represents a regression fit.
+
+**Interpretation:** Mass and radius have a positive correlation—larger planets tend to have higher masses. The log-log transformation makes it easier to visualize this relationship, highlighting a power-law dependence.\
+
 **Mass-Radius Relationship with Power-Law Fit**
 
 ![](./figures/Q3Fig2.png){style="float:right;" fig-alt=""}\
 
-**Residual Plot for Mass-Radius Regression**
+**Description:** This plot extends the previous one by applying a power-law fit to the data.
 
-![](./figures/Q3Fig3.png){style="float:right;" fig-alt=""}\
+**Interpretation:** The power-law fit suggests that planetary radii increase at a decreasing rate with mass, meaning that adding more mass results in proportionally smaller increases in radius.\
 
 ------------------------------------------------------------------------
 
 ###### 2.3.1.2. Exoplanet Mass Distribution
 
-**Histogram of Exoplanet Mass Distribution (Linear Scale) – Frequency distribution of exoplanet masses.**
-
-![](./figures/Q3Fig4.png){style="float:right;" fig-alt=""}\
-
-**Density Plot for Exoplanet Masses (Linear Scale)**
-
-![](./figures/Q3Fig5.png){style="float:right;" fig-alt=""}\
-
 **Histogram of Log-Transformed Exoplanet Mass Distribution – Addressing skewness.**
 
 ![](./figures/Q3Fig6.png){style="float:right;" fig-alt=""}\
 
+**Description:** A histogram of exoplanet masses using a log transformation.
+
+**Interpretation:** Unlike the linear-scale histogram, this shows a more normal-like distribution, indicating that planetary mass follows a power-law distribution.
+
 **Density Plot of Exoplanet Masses (Log Scale) – Better view of mass spread.**
 
 ![](./figures/Q3Fig7.png){style="float:right;" fig-alt=""}\
+
+**Description:** A density plot showing mass distribution on a logarithmic scale.
+
+**Interpretation:** This plot further confirms the skewed nature of the mass distribution, revealing clusters of planets with distinct masses.
 
 ------------------------------------------------------------------------
 
@@ -283,41 +288,37 @@ ggplot(data, aes(x = stellar_magnitude, y = orbital_radius)) +
 
 ![](./figures/Q3Fig8.png){style="float:right;" fig-alt=""}\
 
+**Description:** This scatter plot divides exoplanets into three clusters based on mass and radius.
+
+**Interpretation:** The three clusters likely represent different planet types, such as terrestrial planets, gas giants, and super-Earths.
+
 **Clusters vs. Solar System Planets – Comparison of exoplanet clusters with known planets.**
 
 ![](./figures/Q3Fig9.png){style="float:right;" fig-alt=""}\
 
-**Mass Distribution Across Clusters – Box plot showing cluster-wise mass variation.**
+**Description:** This figure compares exoplanet clusters with known Solar System planets.
 
-![](./figures/Q3Fig10.png){style="float:right;" fig-alt=""}\
+**Interpretation:** The clustering method groups planets similarly to how terrestrial planets, ice giants, and gas giants are classified.
 
 ------------------------------------------------------------------------
 
 ###### 2.3.1.4. Exoplanet Detection Methods
 
-**Detection Method Distribution Across Clusters – Bar chart showing the count of detection methods in each cluster.**
-
-![](./figures/Q3Fig11.png){style="float:right;" fig-alt=""}\
-
 **Exoplanet Mass Distribution by Detection Method – Boxplot comparing mass across different detection techniques.**
 
 ![](./figures/Q3Fig12.png){style="float:right;" fig-alt=""}\
+
+**Description:** A box plot showing mass distributions for different detection methods.
+
+**Interpretation:** Different detection methods favor different types of planets. For example, radial velocity tends to detect higher-mass planets, while transit favors smaller ones.
 
 **Tukey HSD Result Plot – Multiple comparison test for mass variation across detection methods.**
 
 ![](./figures/Q3Fig13.png){style="float:right;" fig-alt=""}\
 
-------------------------------------------------------------------------
+*This Tukey HSD analysis helps determine which detection methods are statistically different in their ability to detect exoplanet masses.*
 
-###### 2.3.1.5. Orbital Radius and Other Relationships
-
-**Exoplanet Mass vs. Orbital Radius – Scatter plot showing orbital radius dependence on mass.**
-
-![](./figures/Q3Fig14.png){style="float:right;" fig-alt=""}\
-
-**Elbow Method to Determine Optimal Number of Clusters – Finding the best number of clusters.**
-
-![](./figures/Q3Fig14.png){style="float:right;" fig-alt=""}\
+*If detection methods lead to biases in mass distribution, conclusions about exoplanet populations may be skewed.*
 
 ------------------------------------------------------------------------
 
@@ -399,19 +400,21 @@ To enhance the robustness of this analysis, additional data could include:
 -   Integration of stellar properties (e.g., metallicity, age, and temperature) to refine models.
 -   Expanding the dataset with newly discovered exoplanets from recent missions.\
 
----
+------------------------------------------------------------------------
 
 #### 2.4. How are detected exoplanets distributed in the galaxy?
 
-The Kaggle database was combined with position data obtained from the Sesame Name Resolver to explore how these exoplanets were distributed in the galaxy. This new data was not formatted in a database, so the information was copied, and a simple python program was written to extract the relevant lines. The output of the python program was reformatted to a csv format and merged with the Kaggle database with R. This did not yield position data for all the exoplanets in the Kaggle database (4917 of the 5250 entries), so the above process was repeated for the missing entries by using the name of the star instead of the exoplanet (these have the exact coordinates; the star name is the same as the exoplanet but lacks the lowercase letter at the end). This yielded an additional 110 positions. After this data was integrated, position data was available for 5027/5250 entries (223 missing positions). This position data was formatted in J2000 (J2K) Earth-centered inertial coordinates and was converted to Cartesian coordinates for graphing. Any differences between origins and orientations in right ascension and J2K systems were ignored. The differences in origin are negligible between solar-system-centered and Earth-centered origins compared to interstellar distances. The conversion for J2K coordinates to Cartesian was done as follows:\
+The Kaggle database was combined with position data obtained from the Sesame Name Resolver to explore how these exoplanets were distributed in the galaxy. This new data was not formatted in a database, so the information was copied, and a simple Python program was written to extract the relevant lines. The output of the Python program was reformatted to a CSV format and merged with the Kaggle database with R. This did not yield position data for all the exoplanets in the Kaggle database (4917 of the 5250 entries), so the above process was repeated for the missing entries by using the name of the star instead of the exoplanet (these have the exact coordinates; the star name is the same as the exoplanet but lacks the lowercase letter at the end). This yielded an additional 110 positions. After this data was integrated, position data was available for 5027/5250 entries (223 missing positions). This position data was formatted in J2000 (J2K) Earth-centered inertial coordinates and was converted to Cartesian coordinates for graphing. Any differences between origins and orientations in right ascension and J2K systems were ignored. The differences in origin are negligible between solar-system-centered and Earth-centered origins compared to interstellar distances. The conversion for J2K coordinates to Cartesian was done as follows:\
 
 ##### Step 1) Convert J2K to radians:
+
 $$
 (\frac{j.hr}{24} + \frac{j.m}{24 * 60} + \frac{j.s}{24 * 3600}) * 2 \pi
 $$\
 Where j.hr, j.m, j.s is the J2K hours, minutes, and seconds respectively.\
 
 ##### Step 2) Convert right ascension to radians:
+
 $$         
 d.sign*(\frac{d.deg}{360} + \frac{d.m}{24*60} + \frac{d.s}{24*3600})*2 \pi
 $$\
@@ -423,22 +426,20 @@ Where d.deg is the declination degrees, d.sign is the sign (+-) of the declinati
 
 $$
 x = r*cos(γ)*cos(θ)
-$$
-$$
+$$ $$
 y = r*cos(γ)*sin(θ)
-$$
-$$
+$$ $$
 z = r*sin(γ)\
 $$\
 Where r is the distance to the exoplanet, γ is the declination in radians, and θ is the right ascension.\
 
 Finally, to ease data analysis further, columns were added based on the existing columns:\
 
-1. The star names were added as a column.
-2. Several stars had more than one exoplanet, so a new column was added to count the number of exoplanets in the system.
-    1. data \<- merge(as.data.frame(table(star.name)), data)
-    2. The new ‘Freq’ column was then renamed to ‘num.exoplanets’
-3. The Kaggle database reported exoplanet mass and radius in a relative to Jupiter/Earth manner; this was converted to mass \[10\^24 kg\] and radius \[km\] and added as new columns mass.10.24.kg and radius.km. This data was found on the NASA website.\
+1.  The star names were added as a column.
+2.  Several stars had more than one exoplanet, so a new column was added to count the number of exoplanets in the system.
+    1.  data \<- merge(as.data.frame(table(star.name)), data)
+    2.  The new ‘Freq’ column was then renamed to ‘num.exoplanets’
+3.  The Kaggle database reported exoplanet mass and radius in a relative to Jupiter/Earth manner; this was converted to mass \[10\^24 kg\] and radius \[km\] and added as new columns mass.10.24.kg and radius.km. This data was found on the NASA website.\
 
 ##### 2.4.1. Visualization
 
@@ -454,14 +455,14 @@ library(plotly)
 axx <- list(nticks=10, range=c(-5000,5000))
 axy <- list(nticks=35, range=c(-25000,10000))
 axz <- list(nticks=25, range=c(-15000,10000))
-# normalize the z and y axis scale using the x-axis as a reference
+# normalize the z and y-axis scale using the x-axis as a reference
 x.r <- 10000
 y.r <- 35000
 z.r <- 25000
 
 # rotate the plot's x-y plane to match the galaxy's plane. This is done by swapping z with -x, and x with z.
 fig <- data %>% plot_ly(x=~z.pos, y=~y.pos, z=~I(-1*x.pos), color=~planet_type, size=~num.exoplanets, text=~star.name, opacity = 0.5)
-# also swap the axis range and aspectratio
+# also swap the axis range and aspect ratio
 fig <- fig %>% layout(scene=list(xaxis=axz, yaxis=axy, zaxis=axx, aspectmode='manual', aspectratio=list(x=z.r/x.r, y=y.r/x.r, z=1)))
 # fig <- fig %>% layout(scene=list(aspectmode='manual', aspectratio=list(x=1, y=y.r/x.r, z=z.r/x.r)))
 fig <- fig %>% add_markers()
@@ -474,20 +475,21 @@ fig  # run plot
 
 ###### 2.4.2.1. Analysis
 
-Two additional data points were added to the database to better line up the 3D plot with a NASA galaxy map. These two entries were Sagittarius A\* and Cygnus OB2. Sagittarius A\* is the black hole at the center of the Milky Way, and its location was well known. The data also shows that the farthest detected exoplanet in the database was at a distance of \~27000 light years, almost the same as Sagittarius A\*, and most of the gravitational microlensing observations that had position data fit on a line between Earth and this farthest exoplanet. Once Sagittarius A\* was plotted, it was in the same direction as this exoplanet. Cygnus OB2 was picked for three reasons: 3 points are needed to define a plane (Earth, Cygnus OB2, Sagittarius A\*), the Kepler Telescope pointed in the direction of the Cygnus constellation, and Cygnus OB2 was marked on the NASA Milky Way map.\
+Two additional data points were added to the database to better line up the 3D plot with a NASA galaxy map. These two entries were Sagittarius A\* and Cygnus OB2. Sagittarius A\* is the black hole at the center of the Milky Way, and its location is well known. The data also shows that the farthest detected exoplanet in the database was at a distance of \~27000 light years, almost the same as Sagittarius A\*, and most of the gravitational microlensing observations that had position data fit on a line between Earth and this farthest exoplanet. Once Sagittarius A\* was plotted, it was in the same direction as this exoplanet. Cygnus OB2 was picked for three reasons: 3 points are needed to define a plane (Earth, Cygnus OB2, Sagittarius A\*), the Kepler Telescope pointed in the direction of the Cygnus constellation, and Cygnus OB2 was marked on the NASA Milky Way map.\
 
 The Kepler observations are distributed in a flattened cone. The cone part is expected since this was the telescope’s field of view, but the flattened nature of the data is unexpected. This is likely an error, but it is lined up with the galactic plane, which could be related to the galaxy's rotation.\
 
 ![](./figures/kepler_field_of_view.png){style="float:left;" fig-alt="KST field of view"}\
 
 ###### 2.4.2.2. Limitations
-- The exoplanet data is extremely sparse, with the observations confined to limited areas.
-- The detection methods have strong bias to particular types of exoplanets.
-- Detection becomes harder as the objects get farther from Earth due to the inverse square law.\
+
+-   The exoplanet data is extremely sparse, with the observations confined to limited areas.
+-   The detection methods have strong bias to particular types of exoplanets.
+-   Detection becomes harder as the objects get farther from Earth due to the inverse square law.\
 
 #### 2.5. What kinds of observations didn’t get position data resolved?
 
-Position data was not found for over 200 exoplanets. Most of the missing data was from gravitational microlensing detections. This is likely because the Sesame Name Resolver did not have these surveys in their database or Kaggle named these exoplanets differently. However, this was only about 3.8% of the exoplanets.\
+Position data was not found for over 200 exoplanets. Most of the missing data was from gravitational microlensing detections. This is likely because the Sesame Name Resolver did not have these surveys in their database, or Kaggle named these exoplanets differently. However, this was only about 3.8% of the exoplanets.\
 
 ##### 2.5.1. Visualization
 
@@ -604,13 +606,13 @@ x2 %>%
 
 The figure above shows that the distribution of exoplanet type is roughly the same in systems with more than one exoplanet.\
 
----
+------------------------------------------------------------------------
 
 ### 3. Impact
 
 The classification of exoplanets is crucial in identifying potentially habitable planets and refining criteria for exoplanet research. This study reveals key insights, such as the tendency of more minor planets to orbit fainter stars, which has implications for planetary formation theories. Additionally, the findings highlight the influence of different detection methods on exoplanet discovery, guiding future telescope designs and improving target selection for habitability studies. Understanding these relationships can help prioritize observations, reduce detection biases, and refine planetary classification models. However, inaccuracies in these models could lead to misinterpretations about exoplanet prevalence. Further analysis, including regression and clustering and advancements in detection techniques, will enhance our ability to predict planetary characteristics and improve the search for Earth-like worlds.\
 
----
+------------------------------------------------------------------------
 
 ### 4. References
 
@@ -619,4 +621,4 @@ The classification of exoplanets is crucial in identifying potentially habitable
 3.  Sesame Name Resolver: \<<https://cds.unistra.fr/cgi-bin/Sesame>\>\
 4.  Jupiter/Earth Data: \<<https://nssdc.gsfc.nasa.gov/planetary/factsheet/jupiterfact.html>\>\
 5.  Kepler Telescope Field of View: \<<https://d1jqu7g1y74ds1.cloudfront.net/wp-content/uploads/2013/04/kepler_field_of_view.png>\>\
-6.  Star Map of Milky Way: “By Kevin Jardine at galaxymap.org. See the README pdf at File:Map production details, Kevin Jardine (2022) for more details. - Main page: <https://gruze.org/posters_dr3/Data> sources and blog pages: <http://galaxymap.org/drupal/node/265>, CC BY 4.0, <https://commons.wikimedia.org/w/index.php?curid=139524709>” \
+6.  Star Map of Milky Way: “By Kevin Jardine at galaxymap.org. See the README pdf at File:Map production details, Kevin Jardine (2022) for more details. - Main page: <https://gruze.org/posters_dr3/Data> sources and blog pages: <http://galaxymap.org/drupal/node/265>, CC BY 4.0, <https://commons.wikimedia.org/w/index.php?curid=139524709>”\
